Regression: Nodes Group sockets created by connecting to empty socket don't show up automatically #112331

Closed
opened 2023-09-13 16:27:37 +02:00 by Simon Thommes · 1 comment
Member

System Information
Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.104.05

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-13 14:02, hash: 6c98cb73acb1
Worked: Recently

Short description of error

Exact steps for others to reproduce the error
See video

**System Information** Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.104.05 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-13 14:02, hash: `6c98cb73acb1` Worked: Recently **Short description of error** <video src="/attachments/5deeb1da-801d-4501-b9af-e3e7b4af7ff8" title="bug_nodegroup_inputs_not_showing-2023-09-13_16.25.07.mp4" controls></video> **Exact steps for others to reproduce the error** See video
Simon Thommes added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-09-13 16:27:37 +02:00
Iliya Katushenock added the
Interest
Nodes & Physics
label 2023-09-13 16:32:37 +02:00
Iliya Katushenock changed title from Regression: Nodes: Nodegroup sockets created by connecting to empty socket don't show up automatically to Regression: Nodes Group sockets created by connecting to empty socket don't show up automatically 2023-09-13 16:32:53 +02:00

I can confirm this only in shader nodes. Not sure why.
@LukasTonne /

I can confirm this only in shader nodes. Not sure why. @LukasTonne /
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-14 14:13:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112331
No description provided.