Fix #112331: Add missing node tree updates after exposing sockets.

Explicit calls to `BKE_ntree_update_tag_interface` are currently needed
to trigger updates across ID boundaries.

Note: #111741 is a proper fix for this issue which that will
automatically tag the node tree and not require extra update calls.